# vaporize-all-humans

./: .gitignore  README.md  pyproject.toml
notebooks/: test_yolov5.py
tests/: test_human_vaporizer.py
tools/: vaporize.py
vaporize_all_humans/: bounding_box.py  config.py  inpainting_mask.py  utils.py  vaporizer.py
vaporize_all_humans/step/: blending.py  inpainting.py  object_detection.py  semantic_segmentation.py  vaporizer_step.py
