[tool.poetry]
name = "vaporize-all-humans"
version = "0.1.0"
description = ""
authors = ["Alberto Parravicini"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "1.11.0"
spyder-kernels = "^2.3.2"
opencv-python = "^4.6.0"
black = "^22.6.0"
torchtyping = "^0.1.4"
webdataset = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
